--- a/global_packs/required_resources/aim_to_star_language_pack/assets/invoke/lang/zh_cn.json
+++ b/global_packs/required_resources/aim_to_star_language_pack/assets/invoke/lang/zh_cn.json
@@ -19,19 +19,19 @@
     "spell.invoke.enders_gaze.description": "召唤五只围绕目标旋转的末影之眼，它们每0.4秒就会造成一次 {damage} 点的奥秘伤害，持续4秒。当目标死亡时，末影之眼会分离并重新追索到最近的敌人上，同时刷新持续时间。",
     "spell.invoke.buckshot.description": "以圆锥形向外射出12个细小的流星碎片，每个碎片都会造成 {damage} 点火焰法术伤害。",
     "spell.invoke.greaterfireball.name": "大火球术",
-    "spell.invoke.twofire.name": "调用火焰术 II",
+    "spell.invoke.twofire.name": "火焰召唤 II",
     "spell.invoke.glacier.name": "连锁冰川",
     "entity.invoke.glaciermedium": "二级冰川",
     "item.invoke.wildinvoker_spell_book": "自然咒典",
     "spell.invoke.meteorrush.description": "将自己转化成纯粹的火焰并向前冲刺，吟唱结束后在冲刺终点8格半径内产生爆炸，并造成 {damage} 点火焰法术伤害。",
     "spell.invoke.greaterfireball.description": "朝目标方向发射一个超载火球，对目标8格半径内造成最多（{damage}）点火焰法术伤害。",
-    "spell.invoke.runicinvocation.description": "当你施法时，你会获得对应元素的符文。施展法术来消耗这些符文从而调用一个更强大的法术。",
+    "spell.invoke.runicinvocation.description": "当你施法时，你会获得对应元素的符文。施展法术来消耗这些符文从而召唤一个更强大的法术。",
     "spell.invoke.icestorm.name": "冰风暴",
     "spell.invoke.sonicboom.name": "音爆",
-    "spell.invoke.wild.name": "调用外来法术",
-    "spell.invoke.twofrost.name": "调用霜冻术 II",
+    "spell.invoke.wild.name": "召唤外来法术",
+    "spell.invoke.twofrost.name": "寒冰召唤 II",
     "spell.invoke.deathchill.name": "死亡寒意",
-    "spell.invoke.onefrost.name": "调用霜冻术 I",
+    "spell.invoke.onefrost.name": "寒冰召唤 I",
     "spell.invoke.nullinvoke.description": "你没有咒术魔能。使用空白符文来驱散该物品的咒术魔法。",
     "spell.invoke.supernova.name": "超新星",
     "spell.invoke.hijack.description": "投掷一颗带有目标名字的末影珍珠。",
@@ -40,17 +40,17 @@
     "item.invoke.frostinvoker_spell_book": "寒冰咒典",
     "item.invoke.invoker_spell_book": "符文咒典",
     "entity.invoke.glacierlarge": "三级冰川",
-    "spell.invoke.runicinvocation.name": "符文调用",
+    "spell.invoke.runicinvocation.name": "符文召唤",
     "spell.invoke.buckshot.name": "流星四射",
-    "spell.invoke.onefire.name": "调用火焰术 I",
-    "spell.invoke.threearcane.name": "调用奥秘 III",
-    "spell.invoke.onearcane.description": "调用奥秘力量，加一召唤之力。",
+    "spell.invoke.onefire.name": "火焰召唤 I",
+    "spell.invoke.threearcane.name": "奥术召唤 III",
+    "spell.invoke.onearcane.description": "奥术召唤力量，获得一层咒术魔能。",
     "item.invoke.null_rune": "空白符文",
     "entity.invoke.glaciersmall": "一级冰川",
-    "spell.invoke.twofire.description": "调用火焰之力，加二召唤之力。",
+    "spell.invoke.twofire.description": "火焰召唤之力，获得两层咒术魔能。",
     "spell.invoke.arcaneoverdrive.description": "制造一颗新星，对周围的敌人造成 {damage} 点奥秘伤害，并给予自己一个可叠加的攻速增益。可以在命中时触发。",
     "effect.invoke.flamerush": "火焰跟踪",
-    "spell.invoke.threefire.description": "调用火海之力，加三召唤之力。",
+    "spell.invoke.threefire.description": "召唤狱火之力，获得三层咒术魔能。",
     "spell.invoke.heo.name": "寒冰召唤：Heo",
     "spell.invoke.resonance.name": "霜之共鸣",
     "spell.invoke.homing.description": "发射一连串的四个火球，这些火球可在敌人之间和方块表面反弹，每个火球造成 {damage} 点火焰法术伤害。",
@@ -58,38 +58,38 @@
     "spell.invoke.arcaneoverdrive.name": "奥秘坠击",
     "spell.invoke.magic_missile.description": "每秒造成 {damage} 点奥秘伤害。法术释放后就会开始吟唱并进入冷却，多个魔法导弹会在吟唱期间逐渐累积成型，其施法对象是你在吟唱期间选中的任意目标，吟唱结束后所有魔法导弹都会依次向施法目标射去。",
     "spell.invoke.glacialhammer.description": "猛挥你的武器，对你前方的敌人造成{damage}点霜冻伤害，并将第一个被击中的敌人包裹在一个迷你冰川中，这个冰川会同时造成法术“冰川连锁”中的伤害。你可以挥动武器打碎迷你冰川，在区域内再次造成相同伤害。",
-    "spell.invoke.twofrost.description": "调用雾凇之力，加二召唤之力。",
-    "effect.invoke.invoking": "调用法术",
+    "spell.invoke.twofrost.description": "召唤冰霜之力，获得两层咒术魔能。",
+    "effect.invoke.invoking": "召唤法术",
     "spell.invoke.bouncing.description": "释放一枚致命的疫源弹射物，它会持续飞行128格直到命中敌人。疫源弹射物命中后会反弹，反弹时造成 {damage} 点奥秘法术伤害，并产生4个不可反弹的弹射物，同时给予你1游戏刻的生命恢复X效果。",
     "spell.invoke.sharedsuffering.name": "共患其苦",
     "spell.invoke.glacier.description": "召唤出一连串的四个小型冰川，每个冰川都会比上一个大，并在其覆盖的区域内造成50%基础伤害，基础伤害是 {damage} 点寒冰伤害。",
-    "spell.invoke.nullinvoke.name": "调用法术：空",
+    "spell.invoke.nullinvoke.name": "召唤法术：空",
     "spell.invoke.armageddon.name": "诸神黄昏",
     "spell.invoke.agonizingblast.name": "痛苦爆破",
-    "spell.invoke.onefrost.description": "调用霜冻之力，加一召唤之力。",
+    "spell.invoke.onefrost.description": "召唤寒冰之力，获得一层咒术魔能。",
     "spell.invoke.gon.name": "奥秘召唤：Gon",
     "spell.invoke.enders_gaze.name": "末影凝视",
-    "spell.invoke.onearcane.name": "调用奥秘 I",
-    "spell.invoke.twoarcane.name": "调用奥秘 II",
+    "spell.invoke.onearcane.name": "奥术召唤 I",
+    "spell.invoke.twoarcane.name": "奥术召唤 II",
     "spell.invoke.sonicboom.description": "向目标方向发射音爆，对第一个命中的敌人造成 {damage} 点奥秘伤害。",
-    "spell.invoke.threefrost.name": "调用霜冻术 III",
+    "spell.invoke.threefrost.name": "寒冰召唤 III",
     "spell.invoke.rah.name": "火焰召唤：Rah",
     "spell.invoke.icebarrage.name": "冰封弹幕",
     "spell.invoke.upheaval.name": "冰川剧变",
     "spell.invoke.combustion.description": "向目标方向发射一块高速飞行的不稳定流星碎片，在命中的第一个目标周围12格半径内造成 {damage} 点火焰法术伤害。",
     "spell.invoke.gon.description": "用奥秘能量轰击一个敌人，造成 {damage} 点奥秘伤害。命中时给予施法者一级奥秘魔能，最多叠加至3级。",
     "spell.invoke.scorchingwind.description": "用焚风炙烤你周围的区域，点燃敌人，并造成 {damage} 点火焰法术伤害。",
-    "spell.invoke.onefire.description": "调用火之力，加一召唤之力。",
+    "spell.invoke.onefire.description": "召唤火焰之力，获得一层咒术魔能。",
     "itemGroup.invoke.general": "Invocation Items",
     "spell.invoke.bouncing.name": "瘟疫肆虐",
     "spell.invoke.homing.name": "炎流",
-    "spell.invoke.wild.description": "随机调出一个法术。",
+    "spell.invoke.wild.description": "随机召唤出一个法术。",
     "spell.invoke.freezeaura.name": "急冻光环",
     "spell.invoke.combustion.name": "爆裂流星",
     "spell.invoke.heo.description": "召唤一个冰块来攻击敌人，造成 {damage} 点霜冻伤害。命中时给予施法者一级寒冰魔能，最多叠加至3级。",
-    "spell.invoke.twoarcane.description": "调用神秘之力，加二召唤之力。",
+    "spell.invoke.twoarcane.description": "召唤神秘之力，获得两层咒术魔能。",
     "spell.invoke.amethystburst.name": "紫晶风暴",
-    "spell.invoke.threearcane.description": "调用骇人的力量，加三召唤之力。",
+    "spell.invoke.threearcane.description": "召唤骇人的力量，获得三层咒术魔能。",
     "spell.invoke.magic_missile.name": "魔法导弹",
     "spell.invoke.freezeaura.description": "打开和关闭一个光环，让你周围的敌人冻结10秒，当他们停留在该区域时将刷新光环。每冻结一个敌人消耗一个冰霜符文。",
     "spell.invoke.risingflame.name": "熊熊烈火",
@@ -98,7 +98,7 @@
     "spell.invoke.rah.description": "发射一个火球，造成 {damage} 点火焰伤害。命中时给予施法者一级火焰魔能，最多叠加至3级。",
     "spell.invoke.glacialhammer.name": "冰川之锤",
     "spell.invoke.meteorrush.name": "跟踪火焰",
-    "spell.invoke.threefrost.description": "调用冻创之力，加三召唤之力。",
-    "spell.invoke.threefire.name": "调用火焰术 III",
+    "spell.invoke.threefrost.description": "召唤冻创之力，获得三层咒术魔能。",
+    "spell.invoke.threefire.name": "召唤火焰术 III",
     "spell.invoke.flameray.name": "灼热射线"
 }
