--- a/global_packs/required_resources/aim_to_star_language_pack/assets/petshop/lang/zh_cn.json
+++ b/global_packs/required_resources/aim_to_star_language_pack/assets/petshop/lang/zh_cn.json
@@ -1,7 +1,7 @@
 {
     "entity.petshop.sheltie": "牧羊犬",
     "item.petshop.dog_treat": "狗粮",
-    "block.petshop.pet_bowl_pink": "粉色宠物碗",
+    "block.petshop.pet_bowl_pink": "粉红色宠物碗",
     "block.petshop.pet_bowl_orange": "橙色宠物碗",
     "block.petshop.pet_bowl_light_gray": "淡灰色宠物碗",
     "block.petshop.pet_bowl_brown": "棕色宠物碗",
