--- a/global_packs/required_resources/aim_to_star_language_pack/assets/spellbladenext/lang/zh_cn.json
+++ b/global_packs/required_resources/aim_to_star_language_pack/assets/spellbladenext/lang/zh_cn.json
@@ -108,7 +108,7 @@
     "spell.spellbladenext.frostbloom0.name": "冰霜雪莲",
     "spell.spellbladenext.eldritchblast.description": "向目标所在方向发射冲击波，对一条线上的所有敌人造成 {damage} 点奥秘伤害。施法会消耗所有爆发层数，每有1层爆发，冲击波数量加1。",
     "item.spellbladenext.crystal_cutlass": "水晶短剑",
-    "spell.spellbladenext.coldbuff.description": "如果你有寒冰魔能IV+，施法时驱除体内的寒气，解除冰冻，同时获得8秒力量V效果，并赋予敌人150%的冰冻效果。",
+    "spell.spellbladenext.coldbuff.description": "若有寒冰魔能IV+效果，施法将体内的冰冻寒气以150%的冰冻效果强制给予敌人，并获得8秒力量V效果。",
     "item.spellbladenext.runefrosted_feet": "寒冰符文靴子",
     "spell.spellbladenext.phoenixdive.name": "凤凰冲击",
     "item.spellbladenext.frost_claymore": "寒冰阔剑",
@@ -120,7 +120,7 @@
     "item.spellbladenext.runefrosted_legs": "寒冰符文护腿",
     "spell.spellbladenext.amethystslash.name": "紫晶碎溅",
     "spell.spellbladenext.deathchill.name": "死亡寒意",
-    "spell.spellbladenext.deathchill.description": "被动：寒气入骨，暖意难近。你会在造成伤害的同时吸取敌人的热量，使其无法抵御寒气的侵袭，瑟瑟发抖。主动：寒气迅速入体，施法者会逐渐进入冰冻状态，并获得最高三级的抗性提升效果，施法越久，抗性提升等级越高。",
+    "spell.spellbladenext.deathchill.description": "被动：寒气入骨，暖意难近。你会在造成伤害的同时吸取敌人的热量，使其无法抵御寒气的侵袭，瑟瑟发抖。主动：寒气迅速入体，但你会获得最高三级的抗性提升效果，施法越久，抗性提升等级越高。",
     "effect.spellbladenext.slamming": "龙之震击",
     "entity.spellbladenext.gladius": "寒冰剑刃",
     "spell.spellbladenext.frostflourish.description": "快速旋转，造成 {damage}_0 点物理伤害与 {damage}_1 点寒冰法术伤害。",
