--- a/global_packs/required_resources/aim_to_star_language_pack/assets/variantbarrels/lang/zh_cn.json
+++ b/global_packs/required_resources/aim_to_star_language_pack/assets/variantbarrels/lang/zh_cn.json
@@ -1,53 +1,53 @@
 {
-    "block.variantbarrels.ru_pink_bioshroom_barrel": "粉色生物蘑菇桶",
+    "block.variantbarrels.ru_pink_bioshroom_barrel": "粉红色生物蘑菇桶",
     "block.variantbarrels.tr_rubber_barrel": "橡胶桶",
     "block.variantbarrels.bot_shimmerwood_barrel": "闪光木桶",
     "block.variantbarrels.mc_putrid_barrel": "腐烂木桶",
     "block.variantbarrels.ns_willow_barrel": "柳树木桶",
     "block.variantbarrels.ns_olive_barrel": "橄榄木桶",
-    "block.variantbarrels.ru_lime_painted_barrel": "黄绿色喷漆桶",
+    "block.variantbarrels.ru_lime_painted_barrel": "黄绿色喷漆木桶",
     "block.variantbarrels.ru_cobalt_barrel": "钴蓝木桶",
     "block.variantbarrels.bot_livingwood_barrel": "生命木桶",
     "block.variantbarrels.aa_glacian_barrel": "冰川木桶",
     "block.variantbarrels.prom_palm_barrel": "棕榈木桶",
     "block.variantbarrels.ru_kapok_barrel": "木棉木桶",
-    "block.variantbarrels.ru_dead_barrel": "枯木桶",
-    "block.variantbarrels.bm_blighted_balsa_barrel": "枯萎的巴尔萨木桶",
-    "block.variantbarrels.ru_purple_painted_barrel": "紫色喷漆桶",
-    "block.variantbarrels.ru_yellow_painted_barrel": "黄色喷漆桶",
+    "block.variantbarrels.ru_dead_barrel": "枯叶木桶",
+    "block.variantbarrels.bm_blighted_balsa_barrel": "染菌轻木桶",
+    "block.variantbarrels.ru_purple_painted_barrel": "紫色喷漆木桶",
+    "block.variantbarrels.ru_yellow_painted_barrel": "黄色喷漆木桶",
     "block.variantbarrels.dark_oak_barrel": "深色橡木桶",
     "block.variantbarrels.ns_sugi_barrel": "杉木桶",
-    "block.variantbarrels.ru_magnolia_barrel": "玉兰木桶",
-    "block.variantbarrels.bm_willow_barrel": "柳树木桶",
-    "block.variantbarrels.ns_cypress_barrel": "柏树木桶",
+    "block.variantbarrels.ru_magnolia_barrel": "木兰木桶",
+    "block.variantbarrels.bm_willow_barrel": "柳木桶",
+    "block.variantbarrels.ns_cypress_barrel": "柏木木桶",
     "block.variantbarrels.warped_barrel": "诡异木桶",
     "block.minecraft.barrel": "云杉木桶",
     "block.variantbarrels.ru_blue_bioshroom_barrel": "蓝色生物菇木桶",
     "block.variantbarrels.dad_echo_barrel": "回声木桶",
-    "block.variantbarrels.ru_green_painted_barrel": "绿色喷漆桶",
+    "block.variantbarrels.ru_green_painted_barrel": "绿色喷漆木桶",
     "block.variantbarrels.bm_swamp_cypress_barrel": "沼泽柏木桶",
-    "block.variantbarrels.ru_light_blue_painted_barrel": "淡蓝色喷漆桶",
+    "block.variantbarrels.ru_light_blue_painted_barrel": "淡蓝色喷漆木桶",
     "block.variantbarrels.ns_fir_barrel": "冷杉木桶",
     "block.variantbarrels.aa_aeronos_barrel": "艾隆诺斯木桶",
     "block.variantbarrels.ru_yellow_bioshroom_barrel": "黄色生物蘑菇桶",
-    "block.variantbarrels.ru_pink_painted_barrel": "粉红色喷漆桶",
-    "block.variantbarrels.bw_cypress_barrel": "柏树木桶",
-    "block.variantbarrels.ru_mauve_barrel": "紫红木桶",
+    "block.variantbarrels.ru_pink_painted_barrel": "粉红色喷漆木桶",
+    "block.variantbarrels.bw_cypress_barrel": "柏木木桶",
+    "block.variantbarrels.ru_mauve_barrel": "槿紫木桶",
     "block.variantbarrels.sp_stone_pine_barrel": "石松木桶",
-    "block.variantbarrels.ru_joshua_barrel": "约书亚木桶",
+    "block.variantbarrels.ru_joshua_barrel": "短叶丝兰木桶",
     "block.variantbarrels.ru_socotra_barrel": "苏科特拉木桶",
     "block.variantbarrels.ru_palm_barrel": "棕榈木桶",
-    "block.variantbarrels.bm_ancient_oak_barrel": "远古橡木桶",
-    "block.variantbarrels.ru_blackwood_barrel": "黑木桶",
+    "block.variantbarrels.bm_ancient_oak_barrel": "古橡木桶",
+    "block.variantbarrels.ru_blackwood_barrel": "黑檀木桶",
     "block.variantbarrels.cs_scorched_barrel": "烧焦木桶",
     "block.variantbarrels.ru_black_painted_barrel": "黑色喷漆木桶",
     "block.variantbarrels.ru_cherry_barrel": "樱花木桶",
     "block.variantbarrels.ru_baobab_barrel": "猴面包木桶",
-    "block.variantbarrels.ns_redwood_barrel": "红木桶",
+    "block.variantbarrels.ns_redwood_barrel": "红木木桶",
     "block.variantbarrels.oak_barrel": "橡木桶",
-    "block.variantbarrels.ru_alpha_oak_barrel": "阿尔法橡木桶",
-    "block.variantbarrels.ru_pine_barrel": "松木桶",
-    "block.variantbarrels.ru_light_gray_painted_barrel": "淡灰色喷漆桶",
+    "block.variantbarrels.ru_alpha_oak_barrel": "Alpha橡木桶",
+    "block.variantbarrels.ru_pine_barrel": "松木木桶",
+    "block.variantbarrels.ru_light_gray_painted_barrel": "淡灰色喷漆木桶",
     "block.variantbarrels.bot_dreamwood_barrel": "梦境木桶",
     "block.variantbarrels.ds_charred_barrel": "烧焦木桶",
     "block.variantbarrels.acacia_barrel": "金合欢木桶",
@@ -55,37 +55,37 @@
     "block.variantbarrels.prom_sakura_barrel": "樱花木桶",
     "block.variantbarrels.ldbp_palm_barrel": "棕榈木桶",
     "block.variantbarrels.ru_cyan_painted_barrel": "青色涂漆木桶",
-    "block.variantbarrels.ru_red_painted_barrel": "红色喷漆桶",
-    "block.variantbarrels.ru_brimwood_barrel": "硬木桶",
+    "block.variantbarrels.ru_red_painted_barrel": "红色喷漆木桶",
+    "block.variantbarrels.ru_brimwood_barrel": "硫凝木桶",
     "block.variantbarrels.ru_willow_barrel": "柳树木桶",
-    "block.variantbarrels.ru_white_painted_barrel": "白色喷漆桶",
+    "block.variantbarrels.ru_white_painted_barrel": "白色喷漆木桶",
     "block.variantbarrels.bw_juniper_barrel": "杜松木桶",
     "block.variantbarrels.ru_brown_painted_barrel": "棕色喷漆木桶",
     "block.variantbarrels.bw_dragons_blood_barrel": "龙血木桶",
     "block.variantbarrels.prom_dark_amaranth_barrel": "深紫红木桶",
     "block.variantbarrels.ns_joshua_barrel": "约书亚木桶",
     "block.variantbarrels.aa_strophar_barrel": "斯特罗法尔木桶",
-    "block.variantbarrels.ru_orange_painted_barrel": "橙色喷漆桶",
-    "block.variantbarrels.ru_eucalyptus_barrel": "桉树木桶",
+    "block.variantbarrels.ru_orange_painted_barrel": "橙色喷漆木桶",
+    "block.variantbarrels.ru_eucalyptus_barrel": "桉木木桶",
     "block.variantbarrels.crimson_barrel": "绯红木桶",
     "block.variantbarrels.mangrove_barrel": "红树木桶",
     "block.variantbarrels.cherry_barrel": "樱花木桶",
     "block.variantbarrels.ldv_cherry_barrel": "樱花木桶",
     "block.variantbarrels.bw_elder_barrel": "年老木桶",
     "block.variantbarrels.ns_aspen_barrel": "山杨木桶",
-    "block.variantbarrels.ru_cypress_barrel": "柏树木桶",
+    "block.variantbarrels.ru_cypress_barrel": "柏木木桶",
     "block.variantbarrels.ns_maple_barrel": "枫木桶",
     "block.variantbarrels.ee_primordial_barrel": "原始木桶",
     "block.variantbarrels.ru_magenta_painted_barrel": "品红色涂漆桶",
     "block.variantbarrels.ru_maple_barrel": "枫木桶",
     "block.variantbarrels.jungle_barrel": "丛林木桶",
-    "block.variantbarrels.ru_redwood_barrel": "红木桶",
+    "block.variantbarrels.ru_redwood_barrel": "红杉木桶",
     "block.variantbarrels.ns_wisteria_barrel": "紫藤木桶",
     "block.variantbarrels.ba_rotten_barrel": "腐烂木桶",
     "block.variantbarrels.ru_larch_barrel": "落叶松木桶",
     "block.variantbarrels.ru_blue_painted_barrel": "蓝色喷漆木桶",
     "block.variantbarrels.ru_gray_painted_barrel": "灰色喷漆木桶",
-    "block.variantbarrels.ru_sculkwood_barrel": "隐士木桶",
+    "block.variantbarrels.ru_sculkwood_barrel": "幽匿木桶",
     "block.variantbarrels.ru_green_bioshroom_barrel": "绿色生物蘑菇桶",
     "block.variantbarrels.birch_barrel": "白桦木桶",
     "block.variantbarrels.prom_maple_barrel": "枫木桶",
