--- a/global_packs/required_resources/aim_to_star_language_pack/assets/variantbeehives/lang/zh_cn.json
+++ b/global_packs/required_resources/aim_to_star_language_pack/assets/variantbeehives/lang/zh_cn.json
@@ -7,44 +7,44 @@
     "block.variantbeehives.ru_cyan_painted_beehive": "青色喷漆蜂箱",
     "block.variantbeehives.aa_glacian_beehive": "格拉西亚蜂箱",
     "block.variantbeehives.ru_lime_painted_beehive": "黄绿色喷漆蜂箱",
-    "block.variantbeehives.ru_blackwood_beehive": "黑木蜂箱",
+    "block.variantbeehives.ru_blackwood_beehive": "黑檀蜂箱",
     "block.variantbeehives.cherry_beehive": "樱花蜂箱",
-    "block.variantbeehives.bm_swamp_cypress_beehive": "沼泽柏树蜂箱",
+    "block.variantbeehives.bm_swamp_cypress_beehive": "沼泽柏木蜂箱",
     "block.variantbeehives.ru_black_painted_beehive": "黑色喷漆蜂箱",
     "block.variantbeehives.ru_blue_bioshroom_beehive": "蓝色生物蘑菇蜂箱",
     "block.variantbeehives.prom_palm_beehive": "棕榈蜂箱",
-    "block.variantbeehives.ru_dead_beehive": "枯死蜂箱",
+    "block.variantbeehives.ru_dead_beehive": "枯叶蜂箱",
     "block.variantbeehives.bw_elder_beehive": "年老蜂箱",
     "block.minecraft.beehive": "橡木蜂箱",
     "block.variantbeehives.crimson_beehive": "绯红蜂箱",
     "block.variantbeehives.ru_green_bioshroom_beehive": "绿色生物蘑菇蜂箱",
-    "block.variantbeehives.ru_pink_painted_beehive": "粉色喷漆蜂箱",
+    "block.variantbeehives.ru_pink_painted_beehive": "粉红色喷漆蜂箱",
     "block.variantbeehives.ns_sugi_beehive": "杉木蜂箱",
-    "block.variantbeehives.ru_brimwood_beehive": "褐刺蜂箱",
+    "block.variantbeehives.ru_brimwood_beehive": "硫凝木蜂箱",
     "block.variantbeehives.ru_yellow_painted_beehive": "黄色喷漆蜂箱",
     "block.variantbeehives.ru_magenta_painted_beehive": "品红色喷漆蜂箱",
     "block.variantbeehives.ns_redwood_beehive": "红木蜂箱",
     "block.variantbeehives.ru_larch_beehive": "落叶松蜂箱",
-    "block.variantbeehives.ru_kapok_beehive": "木棉树蜂箱",
+    "block.variantbeehives.ru_kapok_beehive": "木棉蜂箱",
     "block.variantbeehives.jungle_beehive": "丛林蜂箱",
-    "block.variantbeehives.ru_maple_beehive": "枫树蜂箱",
+    "block.variantbeehives.ru_maple_beehive": "枫木蜂箱",
     "block.variantbeehives.ns_mahogany_beehive": "红木蜂箱",
     "block.variantbeehives.ru_orange_painted_beehive": "橙色喷漆蜂箱",
     "block.variantbeehives.warped_beehive": "诡异蜂箱",
     "block.variantbeehives.bw_juniper_beehive": "杜松蜂箱",
     "block.variantbeehives.ns_willow_beehive": "柳树蜂箱",
-    "block.variantbeehives.ru_magnolia_beehive": "玉兰花蜂箱",
+    "block.variantbeehives.ru_magnolia_beehive": "木兰花蜂箱",
     "block.variantbeehives.aa_strophar_beehive": "斯特罗法尔蜂箱",
     "block.variantbeehives.eco_walnut_beehive": "胡桃蜂箱",
     "block.variantbeehives.eco_coconut_beehive": "椰子蜂箱",
     "block.variantbeehives.aa_aeronos_beehive": "艾隆诺斯蜂箱",
-    "block.variantbeehives.spruce_beehive": "云杉树蜂箱",
+    "block.variantbeehives.spruce_beehive": "云杉蜂箱",
     "block.variantbeehives.bls_white_oak_beehive": "白橡木蜂箱",
     "block.variantbeehives.ns_palo_verde_beehive": "帕洛维尔德树蜂箱",
-    "block.variantbeehives.ns_cypress_beehive": "柏树蜂箱",
+    "block.variantbeehives.ns_cypress_beehive": "柏木蜂箱",
     "block.variantbeehives.ru_baobab_beehive": "猴面包蜂箱",
     "block.variantbeehives.ru_brown_painted_beehive": "棕色喷漆蜂箱",
-    "block.variantbeehives.ru_joshua_beehive": "约书亚树蜂箱",
+    "block.variantbeehives.ru_joshua_beehive": "短叶丝兰蜂箱",
     "block.variantbeehives.ns_larch_beehive": "落叶松蜂箱",
     "block.variantbeehives.ru_light_blue_painted_beehive": "淡蓝色喷漆蜂箱",
     "block.variantbeehives.ru_gray_painted_beehive": "灰色喷漆蜂箱",
@@ -66,7 +66,7 @@
     "block.variantbeehives.ns_aspen_beehive": "山杨蜂箱",
     "block.variantbeehives.sp_stone_pine_beehive": "石松树蜂箱",
     "block.variantbeehives.tr_rubber_beehive": "橡胶蜂箱",
-    "block.variantbeehives.ru_pink_bioshroom_beehive": "粉色生物蘑菇蜂箱",
+    "block.variantbeehives.ru_pink_bioshroom_beehive": "粉红色生物蘑菇蜂箱",
     "block.variantbeehives.ru_purple_painted_beehive": "紫色喷漆蜂箱",
     "block.variantbeehives.bls_charred_beehive": "烧焦蜂箱",
     "block.variantbeehives.ns_joshua_beehive": "约书亚树蜂箱",
@@ -80,26 +80,26 @@
     "block.variantbeehives.bw_dragons_blood_beehive": "龙血木蜂箱",
     "block.variantbeehives.ns_cedar_beehive": "雪松蜂箱",
     "block.variantbeehives.ldbp_palm_beehive": "棕榈蜂箱",
-    "block.variantbeehives.bm_blighted_balsa_beehive": "枯萎木蜂箱",
+    "block.variantbeehives.bm_blighted_balsa_beehive": "染菌轻木蜂箱",
     "block.variantbeehives.ns_fir_beehive": "冷杉蜂箱",
     "block.variantbeehives.ba_rotten_beehive": "腐烂蜂箱",
     "block.variantbeehives.bamboo_beehive": "竹蜂箱",
     "block.variantbeehives.ds_charred_beehive": "烧焦蜂箱",
     "block.variantbeehives.eco_flowering_azalea_beehive": "开花杜鹃花蜂箱",
-    "block.variantbeehives.ru_eucalyptus_beehive": "桉树蜂箱",
-    "block.variantbeehives.bm_ancient_oak_beehive": "远古橡木蜂箱",
-    "block.variantbeehives.ru_redwood_beehive": "红木蜂箱",
+    "block.variantbeehives.ru_eucalyptus_beehive": "桉木蜂箱",
+    "block.variantbeehives.bm_ancient_oak_beehive": "古橡木蜂箱",
+    "block.variantbeehives.ru_redwood_beehive": "红衫木蜂箱",
     "block.variantbeehives.dad_echo_beehive": "回声蜂箱",
-    "block.variantbeehives.bw_cypress_beehive": "柏树蜂箱",
+    "block.variantbeehives.bw_cypress_beehive": "柏木蜂箱",
     "block.variantbeehives.ru_willow_beehive": "柳树蜂箱",
     "block.variantbeehives.bot_livingwood_beehive": "活木蜂箱",
     "block.variantbeehives.prom_maple_beehive": "枫木蜂箱",
-    "block.variantbeehives.ru_cypress_beehive": "柏树蜂箱",
-    "block.variantbeehives.ru_mauve_beehive": "紫红色蜂箱",
-    "block.variantbeehives.ru_pine_beehive": "松树蜂箱",
+    "block.variantbeehives.ru_cypress_beehive": "柏木蜂箱",
+    "block.variantbeehives.ru_mauve_beehive": "槿紫蜂箱",
+    "block.variantbeehives.ru_pine_beehive": "松木蜂箱",
     "block.variantbeehives.ru_light_gray_painted_beehive": "淡灰色喷漆蜂箱",
     "block.variantbeehives.ru_blue_painted_beehive": "蓝色喷漆蜂箱",
     "block.variantbeehives.ru_white_painted_beehive": "白色喷漆蜂箱",
     "block.variantbeehives.ru_palm_beehive": "棕榈树蜂箱",
-    "block.variantbeehives.bm_willow_beehive": "柳树蜂箱"
+    "block.variantbeehives.bm_willow_beehive": "柳木蜂箱"
 }
