--- a/global_packs/required_resources/aim_to_star_language_pack/assets/variantchiseledbookshelves/lang/zh_cn.json
+++ b/global_packs/required_resources/aim_to_star_language_pack/assets/variantchiseledbookshelves/lang/zh_cn.json
@@ -10,7 +10,7 @@
     "block.variantchiseledbookshelves.ds_charred_chiseled_bookshelf": "烧焦雕纹书架",
     "block.variantchiseledbookshelves.ru_larch_chiseled_bookshelf": "落叶松雕纹书架",
     "block.variantchiseledbookshelves.ru_green_painted_chiseled_bookshelf": "绿色喷漆雕纹书架",
-    "block.variantchiseledbookshelves.ru_mauve_chiseled_bookshelf": "紫红色雕纹书架",
+    "block.variantchiseledbookshelves.ru_mauve_chiseled_bookshelf": "槿紫雕纹书架",
     "block.variantchiseledbookshelves.ru_lime_painted_chiseled_bookshelf": "黄绿色喷漆雕纹书架",
     "block.variantchiseledbookshelves.ns_sugi_chiseled_bookshelf": "杉木雕纹书架",
     "block.variantchiseledbookshelves.ru_maple_chiseled_bookshelf": "枫木雕纹书架",
@@ -18,29 +18,29 @@
     "block.variantchiseledbookshelves.ru_pine_chiseled_bookshelf": "松木雕纹书架",
     "block.variantchiseledbookshelves.ns_willow_chiseled_bookshelf": "柳树雕纹书架",
     "block.variantchiseledbookshelves.ns_joshua_chiseled_bookshelf": "约书亚雕纹书架",
-    "block.variantchiseledbookshelves.ru_redwood_chiseled_bookshelf": "红木雕纹书架",
+    "block.variantchiseledbookshelves.ru_redwood_chiseled_bookshelf": "红衫木雕纹书架",
     "block.variantchiseledbookshelves.ru_light_blue_painted_chiseled_bookshelf": "淡蓝色喷漆雕纹书架",
     "block.variantchiseledbookshelves.ru_yellow_bioshroom_chiseled_bookshelf": "黄色生物菇雕纹书架",
     "block.variantchiseledbookshelves.sp_stone_pine_chiseled_bookshelf": "石松雕纹书架",
     "block.variantchiseledbookshelves.ru_cyan_painted_chiseled_bookshelf": "青色喷漆雕纹书架",
-    "block.variantchiseledbookshelves.bm_willow_chiseled_bookshelf": "柳树雕纹书架",
-    "block.variantchiseledbookshelves.ru_cobalt_chiseled_bookshelf": "钴雕纹书架",
+    "block.variantchiseledbookshelves.bm_willow_chiseled_bookshelf": "柳木雕纹书架",
+    "block.variantchiseledbookshelves.ru_cobalt_chiseled_bookshelf": "钴蓝书架",
     "block.variantchiseledbookshelves.spruce_chiseled_bookshelf": "云杉雕纹书架",
     "block.variantchiseledbookshelves.ns_olive_chiseled_bookshelf": "橄榄雕纹书架",
     "block.variantchiseledbookshelves.bot_dreamwood_chiseled_bookshelf": "梦幻木雕纹书架",
     "block.variantchiseledbookshelves.bls_raw_bamboo_chiseled_bookshelf": "原竹雕纹书架",
     "block.variantchiseledbookshelves.bm_ancient_oak_chiseled_bookshelf": "古橡木雕纹书架",
-    "block.variantchiseledbookshelves.ru_brimwood_chiseled_bookshelf": "卡斯特尖刺木雕纹书架",
+    "block.variantchiseledbookshelves.ru_brimwood_chiseled_bookshelf": "硫凝木雕纹书架",
     "block.variantchiseledbookshelves.ns_larch_chiseled_bookshelf": "落叶松雕纹书架",
     "block.variantchiseledbookshelves.ba_rotten_chiseled_bookshelf": "腐朽雕纹书架",
     "block.variantchiseledbookshelves.ru_magenta_painted_chiseled_bookshelf": "品红色喷漆雕纹书架",
-    "block.variantchiseledbookshelves.ru_joshua_chiseled_bookshelf": "约书亚雕纹书架",
+    "block.variantchiseledbookshelves.ru_joshua_chiseled_bookshelf": "短叶丝兰雕纹书架",
     "block.variantchiseledbookshelves.mc_putrid_chiseled_bookshelf": "腐臭雕纹书架",
     "block.variantchiseledbookshelves.ns_redwood_chiseled_bookshelf": "红木雕纹书架",
     "block.variantchiseledbookshelves.ns_maple_chiseled_bookshelf": "枫木雕纹书架",
     "block.variantchiseledbookshelves.ru_palm_chiseled_bookshelf": "棕榈雕纹书架",
     "block.variantchiseledbookshelves.bw_dragons_blood_chiseled_bookshelf": "龙血木雕纹书架",
-    "block.variantchiseledbookshelves.ru_pink_bioshroom_chiseled_bookshelf": "粉色生物菇雕纹书架",
+    "block.variantchiseledbookshelves.ru_pink_bioshroom_chiseled_bookshelf": "粉红色生物菇雕纹书架",
     "block.variantchiseledbookshelves.prom_palm_chiseled_bookshelf": "棕榈雕纹书架",
     "block.variantchiseledbookshelves.bamboo_chiseled_bookshelf": "竹雕纹书架",
     "block.variantchiseledbookshelves.bls_charred_chiseled_bookshelf": "烧焦雕纹书架",
@@ -53,7 +53,7 @@
     "block.variantchiseledbookshelves.ru_willow_chiseled_bookshelf": "柳木雕纹书架",
     "block.variantchiseledbookshelves.ru_cypress_chiseled_bookshelf": "柏木雕纹书架",
     "block.variantchiseledbookshelves.ns_cedar_chiseled_bookshelf": "雪松雕纹书架",
-    "block.variantchiseledbookshelves.ru_eucalyptus_chiseled_bookshelf": "桉树雕纹书架",
+    "block.variantchiseledbookshelves.ru_eucalyptus_chiseled_bookshelf": "桉木雕纹书架",
     "block.minecraft.chiseled_bookshelf": "橡木雕纹书架",
     "block.variantchiseledbookshelves.warped_chiseled_bookshelf": "诡异雕纹书架",
     "block.variantchiseledbookshelves.birch_chiseled_bookshelf": "白桦雕纹书架",
@@ -66,14 +66,14 @@
     "block.variantchiseledbookshelves.ru_red_painted_chiseled_bookshelf": "红色喷漆雕纹书架",
     "block.variantchiseledbookshelves.ns_cypress_chiseled_bookshelf": "柏木雕纹书架",
     "block.variantchiseledbookshelves.ru_black_painted_chiseled_bookshelf": "黑色喷漆雕纹书架",
-    "block.variantchiseledbookshelves.bm_blighted_balsa_chiseled_bookshelf": "枯萎木雕纹书架",
+    "block.variantchiseledbookshelves.bm_blighted_balsa_chiseled_bookshelf": "染菌轻木雕纹书架",
     "block.variantchiseledbookshelves.ns_fir_chiseled_bookshelf": "冷杉雕纹书架",
     "block.variantchiseledbookshelves.bw_juniper_chiseled_bookshelf": "杜松雕纹书架",
     "block.variantchiseledbookshelves.ns_coconut_chiseled_bookshelf": "椰子雕纹书架",
     "block.variantchiseledbookshelves.jungle_chiseled_bookshelf": "丛林雕纹书架",
-    "block.variantchiseledbookshelves.ldbp_palm_chiseled_bookshelf": "棕榈木雕纹书架",
-    "block.variantchiseledbookshelves.ru_baobab_chiseled_bookshelf": "猴面包树雕纹书架",
-    "block.variantchiseledbookshelves.ru_blackwood_chiseled_bookshelf": "黑木雕纹书架",
+    "block.variantchiseledbookshelves.ldbp_palm_chiseled_bookshelf": "棕榈雕纹书架",
+    "block.variantchiseledbookshelves.ru_baobab_chiseled_bookshelf": "猴面包雕纹书架",
+    "block.variantchiseledbookshelves.ru_blackwood_chiseled_bookshelf": "黑檀雕纹书架",
     "block.variantchiseledbookshelves.acacia_chiseled_bookshelf": "金合欢雕纹书架",
     "block.variantchiseledbookshelves.ns_palo_verde_chiseled_bookshelf": "帕洛维迪雕纹书架",
     "block.variantchiseledbookshelves.bm_swamp_cypress_chiseled_bookshelf": "沼泽柏木雕纹书架",
@@ -84,7 +84,7 @@
     "block.variantchiseledbookshelves.prom_sakura_chiseled_bookshelf": "樱花雕纹书架",
     "block.variantchiseledbookshelves.aa_strophar_chiseled_bookshelf": "斯特罗法雕纹书架",
     "block.variantchiseledbookshelves.cs_umbral_chiseled_bookshelf": "暗影雕纹书架",
-    "block.variantchiseledbookshelves.ru_dead_chiseled_bookshelf": "枯木雕纹书架",
+    "block.variantchiseledbookshelves.ru_dead_chiseled_bookshelf": "枯叶雕纹书架",
     "block.variantchiseledbookshelves.ru_blue_bioshroom_chiseled_bookshelf": "蓝色生物菌雕纹书架",
     "block.variantchiseledbookshelves.aa_glacian_chiseled_bookshelf": "冰川雕纹书架",
     "block.variantchiseledbookshelves.bw_cypress_chiseled_bookshelf": "柏木雕纹书架",
