--- a/global_packs/required_resources/aim_to_star_language_pack/assets/variantcomposters/lang/zh_cn.json
+++ b/global_packs/required_resources/aim_to_star_language_pack/assets/variantcomposters/lang/zh_cn.json
@@ -1,34 +1,34 @@
 {
     "block.variantcomposters.acacia_composter": "金合欢堆肥桶",
-    "block.variantcomposters.ru_baobab_composter": "猴面包树堆肥桶",
+    "block.variantcomposters.ru_baobab_composter": "猴面包堆肥桶",
     "block.variantcomposters.ru_brown_painted_composter": "棕色喷漆堆肥桶",
     "block.variantcomposters.bot_livingwood_composter": "生命木堆肥桶",
-    "block.variantcomposters.ru_sculkwood_composter": "阴森木堆肥桶",
+    "block.variantcomposters.ru_sculkwood_composter": "幽匿堆肥桶",
     "block.variantcomposters.ru_kapok_composter": "木棉堆肥桶",
-    "block.variantcomposters.ru_magnolia_composter": "玉兰堆肥桶",
+    "block.variantcomposters.ru_magnolia_composter": "木兰堆肥桶",
     "block.variantcomposters.prom_palm_composter": "棕榈堆肥桶",
-    "block.variantcomposters.ru_dead_composter": "枯死堆肥桶",
+    "block.variantcomposters.ru_dead_composter": "枯叶堆肥桶",
     "block.variantcomposters.ldbp_palm_composter": "棕榈堆肥桶",
     "block.variantcomposters.prom_sakura_composter": "樱花堆肥桶",
     "block.variantcomposters.cherry_composter": "樱花堆肥桶",
-    "block.variantcomposters.bw_cypress_composter": "柏树堆肥桶",
+    "block.variantcomposters.bw_cypress_composter": "柏木堆肥桶",
     "block.variantcomposters.ru_blue_bioshroom_composter": "蓝色生物菇堆肥桶",
-    "block.variantcomposters.bm_blighted_balsa_composter": "枯萎木堆肥桶",
+    "block.variantcomposters.bm_blighted_balsa_composter": "染菌轻木堆肥桶",
     "block.variantcomposters.mc_putrid_composter": "腐烂堆肥桶",
     "block.variantcomposters.ru_blue_painted_composter": "蓝色喷漆堆肥桶",
-    "block.variantcomposters.ru_blackwood_composter": "黑木堆肥桶",
+    "block.variantcomposters.ru_blackwood_composter": "黑檀堆肥桶",
     "block.variantcomposters.ru_red_painted_composter": "红色喷漆堆肥桶",
     "block.variantcomposters.cs_scorched_composter": "烧焦堆肥桶",
-    "block.variantcomposters.ru_pine_composter": "松树堆肥桶",
-    "block.variantcomposters.ru_brimwood_composter": "边缘木堆肥桶",
+    "block.variantcomposters.ru_pine_composter": "松木堆肥桶",
+    "block.variantcomposters.ru_brimwood_composter": "硫凝木堆肥桶",
     "block.variantcomposters.ru_purple_painted_composter": "紫色喷漆堆肥桶",
-    "block.variantcomposters.ru_maple_composter": "枫树堆肥桶",
+    "block.variantcomposters.ru_maple_composter": "枫木堆肥桶",
     "block.variantcomposters.ns_ghaf_composter": "沙冬青堆肥桶",
     "block.variantcomposters.bot_shimmerwood_composter": "闪耀木堆肥桶",
     "block.variantcomposters.dad_echo_composter": "回声堆肥桶",
     "block.variantcomposters.aa_glacian_composter": "Glacian堆肥桶",
     "block.variantcomposters.ru_socotra_composter": "苏伊士堆肥桶",
-    "block.variantcomposters.ns_maple_composter": "枫树堆肥桶",
+    "block.variantcomposters.ns_maple_composter": "枫木堆肥桶",
     "block.variantcomposters.ns_palo_verde_composter": "帕洛维尔德堆肥桶",
     "block.variantcomposters.mangrove_composter": "红树堆肥桶",
     "block.variantcomposters.cs_umbral_composter": "阴影堆肥桶",
@@ -44,23 +44,23 @@
     "block.variantcomposters.ns_redwood_composter": "红木堆肥桶",
     "block.variantcomposters.oak_composter": "橡木堆肥桶",
     "block.variantcomposters.ru_green_painted_composter": "绿色喷漆堆肥桶",
-    "block.variantcomposters.ru_magenta_painted_composter": "洋红色喷漆堆肥桶",
+    "block.variantcomposters.ru_magenta_painted_composter": "品红色喷漆堆肥桶",
     "block.variantcomposters.ldv_cherry_composter": "樱花堆肥桶",
     "block.variantcomposters.ru_green_bioshroom_composter": "绿色生物菇堆肥桶",
-    "block.variantcomposters.prom_maple_composter": "枫树堆肥桶",
+    "block.variantcomposters.prom_maple_composter": "枫木堆肥桶",
     "block.variantcomposters.bw_dragons_blood_composter": "龙血堆肥桶",
     "block.variantcomposters.aa_aeronos_composter": "Aeronos堆肥桶",
     "block.variantcomposters.warped_composter": "诡异堆肥桶",
-    "block.variantcomposters.ru_eucalyptus_composter": "桉树堆肥桶",
+    "block.variantcomposters.ru_eucalyptus_composter": "桉木堆肥桶",
     "block.variantcomposters.bls_white_oak_composter": "白橡堆肥桶",
-    "block.variantcomposters.ru_joshua_composter": "约书亚树堆肥桶",
+    "block.variantcomposters.ru_joshua_composter": "短叶丝兰堆肥桶",
     "block.variantcomposters.bls_raw_bamboo_composter": "生竹堆肥桶",
     "block.variantcomposters.ds_charred_composter": "烧焦堆肥桶",
     "block.variantcomposters.jungle_composter": "丛林堆肥桶",
-    "block.variantcomposters.bm_willow_composter": "柳树堆肥桶",
+    "block.variantcomposters.bm_willow_composter": "柳木堆肥桶",
     "block.variantcomposters.aa_strophar_composter": "Strophar堆肥桶",
     "block.variantcomposters.ru_alpha_composter": "Alpha 堆肥桶",
-    "block.variantcomposters.ru_pink_bioshroom_composter": "粉色生物菇堆肥桶",
+    "block.variantcomposters.ru_pink_bioshroom_composter": "粉红色生物菇堆肥桶",
     "block.variantcomposters.prom_dark_amaranth_composter": "暗紫苋堆肥桶",
     "block.variantcomposters.ru_palm_composter": "棕榈堆肥桶",
     "block.variantcomposters.ru_orange_painted_composter": "橙色喷漆堆肥桶",
@@ -68,8 +68,8 @@
     "block.variantcomposters.bw_elder_composter": "老木堆肥桶",
     "block.variantcomposters.bw_juniper_composter": "杜松堆肥桶",
     "block.variantcomposters.ru_light_gray_painted_composter": "浅灰色喷漆堆肥桶",
-    "block.variantcomposters.ru_lime_painted_composter": "石灰色喷漆堆肥桶",
-    "block.variantcomposters.ru_mauve_composter": "淡紫色堆肥桶",
+    "block.variantcomposters.ru_lime_painted_composter": "黄绿色喷漆堆肥桶",
+    "block.variantcomposters.ru_mauve_composter": "槿紫堆肥桶",
     "block.variantcomposters.ru_yellow_bioshroom_composter": "黄色生物菇堆肥桶",
     "block.variantcomposters.ru_larch_composter": "落叶松堆肥桶",
     "block.variantcomposters.ru_cherry_composter": "樱花堆肥桶",
@@ -77,7 +77,7 @@
     "block.variantcomposters.ns_fir_composter": "冷杉堆肥桶",
     "block.variantcomposters.ru_white_painted_composter": "白色喷漆堆肥桶",
     "block.variantcomposters.ns_larch_composter": "落叶松堆肥桶",
-    "block.variantcomposters.ru_pink_painted_composter": "粉色喷漆堆肥桶",
+    "block.variantcomposters.ru_pink_painted_composter": "粉红色喷漆堆肥桶",
     "block.variantcomposters.ns_sugi_composter": "杉木堆肥桶",
     "block.variantcomposters.ru_willow_composter": "柳树堆肥桶",
     "block.variantcomposters.ba_rotten_composter": "腐烂堆肥桶",
@@ -85,12 +85,12 @@
     "block.variantcomposters.ru_black_painted_composter": "黑色喷漆堆肥桶",
     "block.minecraft.composter": "云杉堆肥桶",
     "block.variantcomposters.ns_joshua_composter": "约书亚树堆肥桶",
-    "block.variantcomposters.ru_cypress_composter": "柏树堆肥桶",
+    "block.variantcomposters.ru_cypress_composter": "柏木堆肥桶",
     "block.variantcomposters.sp_stone_pine_composter": "石松堆肥桶",
     "block.variantcomposters.ru_yellow_painted_composter": "黄色喷漆堆肥桶",
     "block.variantcomposters.bot_dreamwood_composter": "梦幻木堆肥桶",
-    "block.variantcomposters.ns_cypress_composter": "柏树堆肥桶",
-    "block.variantcomposters.ru_redwood_composter": "红木堆肥桶",
+    "block.variantcomposters.ns_cypress_composter": "柏木堆肥桶",
+    "block.variantcomposters.ru_redwood_composter": "红衫木堆肥桶",
     "block.variantcomposters.ru_light_blue_painted_composter": "浅蓝色喷漆堆肥桶",
     "block.variantcomposters.crimson_composter": "绯红堆肥桶",
     "block.variantcomposters.ru_gray_painted_composter": "灰色喷漆堆肥桶",
