--- a/global_packs/required_resources/aim_to_star_language_pack/assets/variantlecterns/lang/zh_cn.json
+++ b/global_packs/required_resources/aim_to_star_language_pack/assets/variantlecterns/lang/zh_cn.json
@@ -1,39 +1,39 @@
 {
-    "block.variantlecterns.ru_redwood_lectern": "红木讲台",
+    "block.variantlecterns.ru_redwood_lectern": "红衫木讲台",
     "block.variantlecterns.ru_socotra_lectern": "苏科特拉岛讲台",
     "block.variantlecterns.ru_larch_lectern": "落叶松讲台",
     "block.variantlecterns.dark_oak_lectern": "深色橡木讲台",
-    "block.variantlecterns.ru_baobab_lectern": "猴面包树讲台",
+    "block.variantlecterns.ru_baobab_lectern": "猴面包讲台",
     "block.variantlecterns.ru_brown_painted_lectern": "棕色喷漆讲台",
     "block.variantlecterns.ru_blue_painted_lectern": "蓝色喷漆讲台",
     "block.variantlecterns.ru_orange_painted_lectern": "橙色喷漆讲台",
-    "block.variantlecterns.ru_maple_lectern": "枫树讲台",
+    "block.variantlecterns.ru_maple_lectern": "枫木讲台",
     "block.minecraft.lectern": "橡木讲台",
-    "block.variantlecterns.ru_mauve_lectern": "淡紫色讲台",
-    "block.variantlecterns.ru_pine_lectern": "松树讲台",
+    "block.variantlecterns.ru_mauve_lectern": "槿紫讲台",
+    "block.variantlecterns.ru_pine_lectern": "松木讲台",
     "block.variantlecterns.ru_cobalt_lectern": "钴蓝讲台",
-    "block.variantlecterns.ru_magnolia_lectern": "木兰树讲台",
+    "block.variantlecterns.ru_magnolia_lectern": "木兰讲台",
     "block.variantlecterns.bm_swamp_cypress_lectern": "沼泽柏木讲台",
     "block.variantlecterns.ns_joshua_lectern": "约书亚树讲台",
     "block.variantlecterns.ldv_cherry_lectern": "樱花讲台",
-    "block.variantlecterns.ru_kapok_lectern": "木棉树讲台",
-    "block.variantlecterns.bm_blighted_balsa_lectern": "枯萎白楠木讲台",
+    "block.variantlecterns.ru_kapok_lectern": "木棉讲台",
+    "block.variantlecterns.bm_blighted_balsa_lectern": "染菌轻木讲台",
     "block.variantlecterns.aa_aeronos_lectern": "空青石讲台",
     "block.variantlecterns.mc_putrid_lectern": "腐败讲台",
     "block.variantlecterns.aa_strophar_lectern": "斑点讲台",
     "block.variantlecterns.bw_cypress_lectern": "柏木讲台",
     "block.variantlecterns.bls_white_oak_lectern": "白橡木讲台",
-    "block.variantlecterns.ru_joshua_lectern": "约书亚树讲台",
+    "block.variantlecterns.ru_joshua_lectern": "短叶丝兰讲台",
     "block.variantlecterns.ru_yellow_bioshroom_lectern": "黄色生物菇讲台",
-    "block.variantlecterns.ru_cypress_lectern": "柏树讲台",
+    "block.variantlecterns.ru_cypress_lectern": "柏木讲台",
     "block.variantlecterns.prom_palm_lectern": "棕榈讲台",
     "block.variantlecterns.dad_echo_lectern": "回声讲台",
-    "block.variantlecterns.ru_eucalyptus_lectern": "桉树讲台",
-    "block.variantlecterns.ru_blackwood_lectern": "黑木讲台",
+    "block.variantlecterns.ru_eucalyptus_lectern": "桉木讲台",
+    "block.variantlecterns.ru_blackwood_lectern": "黑檀讲台",
     "block.variantlecterns.jungle_lectern": "丛林讲台",
-    "block.variantlecterns.ru_dead_lectern": "枯死讲台",
+    "block.variantlecterns.ru_dead_lectern": "枯叶讲台",
     "block.variantlecterns.ru_lime_painted_lectern": "黄绿色喷漆讲台",
-    "block.variantlecterns.ru_brimwood_lectern": "杨桐讲台",
+    "block.variantlecterns.ru_brimwood_lectern": "硫凝木讲台",
     "block.variantlecterns.ns_sugi_lectern": "杉木讲台",
     "block.variantlecterns.prom_maple_lectern": "枫木讲台",
     "block.variantlecterns.ru_palm_lectern": "棕榈树讲台",
@@ -47,7 +47,7 @@
     "block.variantlecterns.ru_gray_painted_lectern": "灰色喷漆讲台",
     "block.variantlecterns.ldbp_palm_lectern": "棕榈讲台",
     "block.variantlecterns.bot_dreamwood_lectern": "梦幻木讲台",
-    "block.variantlecterns.bm_willow_lectern": "柳树讲台",
+    "block.variantlecterns.bm_willow_lectern": "柳木讲台",
     "block.variantlecterns.acacia_lectern": "金合欢讲台",
     "block.variantlecterns.tr_rubber_lectern": "橡胶树讲台",
     "block.variantlecterns.ru_white_painted_lectern": "白色喷漆讲台",
@@ -71,23 +71,23 @@
     "block.variantlecterns.ns_wisteria_lectern": "紫藤讲台",
     "block.variantlecterns.ru_red_painted_lectern": "红色喷漆讲台",
     "block.variantlecterns.ru_blue_bioshroom_lectern": "蓝生物菌讲台",
-    "block.variantlecterns.bm_ancient_oak_lectern": "远古橡木讲台",
+    "block.variantlecterns.bm_ancient_oak_lectern": "古橡木讲台",
     "block.variantlecterns.prom_sakura_lectern": "樱花讲台",
-    "block.variantlecterns.ru_pink_bioshroom_lectern": "粉色生物菇讲台",
+    "block.variantlecterns.ru_pink_bioshroom_lectern": "粉红色生物菇讲台",
     "block.variantlecterns.bot_livingwood_lectern": "活木讲台",
     "block.variantlecterns.mangrove_lectern": "红树讲台",
     "block.variantlecterns.ru_green_bioshroom_lectern": "绿色生物菇讲台",
     "block.variantlecterns.ns_redwood_lectern": "红木讲台",
     "block.variantlecterns.ds_charred_lectern": "烧焦讲台",
-    "block.variantlecterns.bamboo_lectern": "竹子讲台",
+    "block.variantlecterns.bamboo_lectern": "竹讲台",
     "block.variantlecterns.ru_purple_painted_lectern": "紫色喷漆讲台",
-    "block.variantlecterns.ru_pink_painted_lectern": "粉色喷漆讲台",
+    "block.variantlecterns.ru_pink_painted_lectern": "粉红色喷漆讲台",
     "block.variantlecterns.ns_fir_lectern": "冷杉讲台",
     "block.variantlecterns.ru_magenta_painted_lectern": "品红色喷漆讲台",
     "block.variantlecterns.birch_lectern": "白桦讲台",
     "block.variantlecterns.bw_dragons_blood_lectern": "龙血木讲台",
     "block.variantlecterns.crimson_lectern": "绯红讲台",
-    "block.variantlecterns.cherry_lectern": "樱桃讲台",
+    "block.variantlecterns.cherry_lectern": "樱花讲台",
     "block.variantlecterns.ru_green_painted_lectern": "绿色喷漆讲台",
     "block.variantlecterns.bw_elder_lectern": "长老讲台",
     "block.variantlecterns.ru_light_blue_painted_lectern": "淡蓝色喷漆讲台"
